src/objects/Safety_Assessment_Survey__c.object
<CustomObject>
    <description>Holds the questions(fields) and responses(field values) for all Adverse Event surveys.</description>
    <fields>
        <fullName>Address_of_affected_person__c</fullName>
        <description>S1Q3</description>
        <inlineHelpText>If different from contact on case</inlineHelpText>
        <label>Address of affected person</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adverse_event_symptoms__c</fullName>
        <inlineHelpText>Has the consumer experienced any symptom(s) as a result of the performance complaint or incorrect/misuse? If yes, complete remaining questions on &apos;Adverse Event&apos; Survey.</inlineHelpText>
        <label>Adverse event symptoms?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Advice_from_healthcare_professional__c</fullName>
        <inlineHelpText>If yes - who did you ask (doctor, nurse, dentist, pharmacist, etc.)?</inlineHelpText>
        <label>Advice from healthcare professional</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <inlineHelpText>Either add age in free text  in the first field and select months or years in the drop down OR complete the age range field</inlineHelpText>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_range__c</fullName>
        <inlineHelpText>Age Range</inlineHelpText>
        <label>Age range</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Neonate: birth to 30 days</fullName>
                </value>
                <value>
                    <fullName>Infant: 31days to less than 2 years</fullName>
                </value>
                <value>
                    <fullName>Child: 2 to 5 years</fullName>
                </value>
                <value>
                    <fullName>Child: 6 to 11 years</fullName>
                </value>
                <value>
                    <fullName>Adolescent: 12 to 17 years</fullName>
                </value>
                <value>
                    <fullName>Adult: 18 to 64 years</fullName>
                </value>
                <value>
                    <fullName>Elderly 65 years and over</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allergies__c</fullName>
        <inlineHelpText>Please list any allergies? (separate allergies with a comma e.g. hayfever, peanuts)</inlineHelpText>
        <label>Allergies</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_used__c</fullName>
        <inlineHelpText>How much product do you use each time?</inlineHelpText>
        <label>Amount used</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCM_Task_Id__c</fullName>
        <description>External ID for CCM</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID for CCM</inlineHelpText>
        <label>CCM Task Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>This is the Case that generated this AE Survey</description>
        <inlineHelpText>Please pick the case to which this survey relates to.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>AE_Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Chemical_treatments_used_before_or_after__c</fullName>
        <inlineHelpText>Did you do any other chemical treatments or applications before or after using this product?</inlineHelpText>
        <label>Chemical treatments used before or after</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complete_course_taken__c</fullName>
        <inlineHelpText>Did you complete the 14 day course of treatment?</inlineHelpText>
        <label>Complete course taken</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Condition_before_product_use__c</fullName>
        <inlineHelpText>How would you describe the condition of the area before you applied the product?</inlineHelpText>
        <label>Condition before product use</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correct_dosage__c</fullName>
        <inlineHelpText>Have you taken at least one tablet per day for the first four days? If No or Unknown, additional questions are not needed.</inlineHelpText>
        <label>Correct dosage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Locked_by_GSSA__c</fullName>
        <label>Date Locked by GSSA</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Describe_test__c</fullName>
        <inlineHelpText>How did you do the test?</inlineHelpText>
        <label>Describe test</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Did_you_get_relief__c</fullName>
        <inlineHelpText>Did you get relief within the first four days?</inlineHelpText>
        <label>Did you get relief</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_you_relieve_problem__c</fullName>
        <inlineHelpText>Did you do anything to help relieve the problem? If yes, what did you do?</inlineHelpText>
        <label>Did you relieve problem?</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <inlineHelpText>What is the first name of the affected person?</inlineHelpText>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency_of_use__c</fullName>
        <inlineHelpText>How frequently do you use the product?</inlineHelpText>
        <label>Frequency of use</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Please pick the gender of the person affected</description>
        <inlineHelpText>Please pick the gender of the person affected</inlineHelpText>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Got_advice_from_HealthCare_Pro__c</fullName>
        <inlineHelpText>Did you get advice from a Health Care Professional?</inlineHelpText>
        <label>Got advice from HealthCare Pro?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Henna_reaction__c</fullName>
        <inlineHelpText>If yes to Henna tattoo, did you have a reaction?</inlineHelpText>
        <label>Henna reaction</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Henna_tattoo__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Henna_tattoo__c</fullName>
        <inlineHelpText>Have you ever had a temporary Henna Tattoo?</inlineHelpText>
        <label>Henna tattoo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hospital_visit__c</fullName>
        <inlineHelpText>If yes, how many days were they in hospital?</inlineHelpText>
        <label>Hospital visit</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_was_advice_obtained__c</fullName>
        <inlineHelpText>How did you get the advice - telephone, office visit, ER, urgent care, etc.?</inlineHelpText>
        <label>How was advice obtained</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Symptom_10_still_present__c</fullName>
        <inlineHelpText>Are you still having the problem?</inlineHelpText>
        <label>Is Symptom 10 still present?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recovered</fullName>
                </value>
                <value>
                    <fullName>Not Recovered/Resolved</fullName>
                </value>
                <value>
                    <fullName>Improved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Symptom_1_still_present__c</fullName>
        <inlineHelpText>Are you still having the problem?</inlineHelpText>
        <label>Is Symptom 1 still present?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recovered</fullName>
                </value>
                <value>
                    <fullName>Not Recovered/Resolved</fullName>
                </value>
                <value>
                    <fullName>Improved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Symptom_2_still_present__c</fullName>
        <inlineHelpText>Are you still having the problem?</inlineHelpText>
        <label>Is Symptom 2 still present?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recovered</fullName>
                </value>
                <value>
                    <fullName>Not Recovered/Resolved</fullName>
                </value>
                <value>
                    <fullName>Improved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <inlineHelpText>What is the last name of the affected person?</inlineHelpText>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locked_by_GSSA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked by GSSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_QR_Request_Date__c</fullName>
        <description>The Date/Time the QR is Requested</description>
        <label>Medical QR Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Medical_QR_Status__c</fullName>
        <description>The status the Medical Questionnaire Request is in.</description>
        <inlineHelpText>The status the Medical Questionnaire Request is in.</inlineHelpText>
        <label>Medical QR Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Questionnaire Requested - Attempt 1</fullName>
                </value>
                <value>
                    <fullName>Questionnaire Requested - Attempt 2</fullName>
                </value>
                <value>
                    <fullName>Questionnaire Requested - Attempt 3</fullName>
                </value>
                <value>
                    <fullName>Questionnaire Received</fullName>
                </value>
                <value>
                    <fullName>Unwilling to Complete</fullName>
                </value>
                <value>
                    <fullName>Sent by consumer but not received</fullName>
                </value>
                <value>
                    <fullName>Unable to Re-contact Consumer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Metadata_Survey_Trigger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Metadata Survey Trigger</label>
        <referenceTo>Metadata_Survey_Trigger__c</referenceTo>
        <relationshipName>AE_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Symptoms__c</fullName>
        <defaultValue>2</defaultValue>
        <description>holds the number of symptoms that have been entered</description>
        <label>Number of Symptoms</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overnight_stay_in_hospital__c</fullName>
        <inlineHelpText>Was consumer admitted to a hospital that resulted in an overnight stay in the hospital?</inlineHelpText>
        <label>Overnight stay in hospital?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Permission_to_Follow_Up__c</fullName>
        <description>Used to capture if consumer is willing to have P&amp;G follow up.</description>
        <inlineHelpText>Although there are no safety issues associated with the use of [xx] during pregnancy, there is a regulatory requirement for all companies to follow-up.  We will be sending you a questionnaire to gather some additional details.  Would this be ok?</inlineHelpText>
        <label>Permission to Follow Up</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes (letter is sent along with questionnaire)</fullName>
                </value>
                <value>
                    <fullName>No (case is closed)</fullName>
                </value>
                <value>
                    <fullName>Unknown (case is closed)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_similar_experiences__c</fullName>
        <inlineHelpText>Have you had any similar experiences in the past?</inlineHelpText>
        <label>Previous similar experiences</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products_used_with__c</fullName>
        <inlineHelpText>If yes, what products?</inlineHelpText>
        <label>Products used with</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reaction_to_Test__c</fullName>
        <inlineHelpText>Did the sensitivity/allergy test show any reaction?</inlineHelpText>
        <label>Reaction to Test</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_using_product_product_quality__c</fullName>
        <inlineHelpText>What was your reason for using this product?</inlineHelpText>
        <label>Reason for using product</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_to_caller__c</fullName>
        <description>Enter the affected person&apos;s relationship to the caller.</description>
        <inlineHelpText>Enter the affected person&apos;s relationship to the caller.</inlineHelpText>
        <label>Relationship to caller</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self</fullName>
                </value>
                <value>
                    <fullName>Aunt</fullName>
                </value>
                <value>
                    <fullName>Brother</fullName>
                </value>
                <value>
                    <fullName>Daughter</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>GrandDaughter</fullName>
                </value>
                <value>
                    <fullName>Grandfather</fullName>
                </value>
                <value>
                    <fullName>Grandmother</fullName>
                </value>
                <value>
                    <fullName>Grandson</fullName>
                </value>
                <value>
                    <fullName>Husband</fullName>
                </value>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Sister</fullName>
                </value>
                <value>
                    <fullName>Son</fullName>
                </value>
                <value>
                    <fullName>Uncle</fullName>
                </value>
                <value>
                    <fullName>Wife</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sensitive_data_consent__c</fullName>
        <description>S1Q1</description>
        <inlineHelpText>Do I have your permission to capture your health related data in our secure database?</inlineHelpText>
        <label>Sensitive data consent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No - Does not give consent</fullName>
                </value>
                <value>
                    <fullName>Yes - Individual affected</fullName>
                </value>
                <value>
                    <fullName>Yes - Parent of underage individual affected</fullName>
                </value>
                <value>
                    <fullName>Yes - Is not the individual affected</fullName>
                </value>
                <value>
                    <fullName>Email/Letter/Social Media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sensitivity_test__c</fullName>
        <inlineHelpText>Did you carry out the sensitivity/allergy test?</inlineHelpText>
        <label>Sensitivity test</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Owned by GSSA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Still_using_product__c</fullName>
        <inlineHelpText>Are you still using product?</inlineHelpText>
        <label>Still using product?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Field_Set__c</fullName>
        <formula>Metadata_Survey_Trigger__r.Survey_Fieldset__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Field Set</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Status__c</fullName>
        <inlineHelpText>Reason for Incomplete Survey</inlineHelpText>
        <label>Survey Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer Refused/Hung Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Symptom_10_Body_Part_Affected__c</fullName>
        <description>Please describe which parts of the body were affected?</description>
        <inlineHelpText>Please describe which parts of the body were affected?</inlineHelpText>
        <label>Symptom 10 - Body part affected</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Symptom_1_Body_Part_Affected__c</fullName>
        <description>Please describe which parts of the body were affected?</description>
        <inlineHelpText>Please describe which parts of the body were affected?</inlineHelpText>
        <label>Symptom 1 - Body part affected</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Symptom_2_Body_Part_Affected__c</fullName>
        <description>Please describe which parts of the body were affected?</description>
        <inlineHelpText>Please describe which parts of the body were affected?</inlineHelpText>
        <label>Symptom 2 - Body Part Affected</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_between_test_and_product_use__c</fullName>
        <inlineHelpText>How long did you wait before applying the product after carrying out the sensitivity/allergy test?</inlineHelpText>
        <label>Time between test and product use</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treatment_recommended_or_prescribed__c</fullName>
        <inlineHelpText>Was treatment recommended or prescribed by the Health Care Professional? If yes - what type (get name and route of medications)</inlineHelpText>
        <label>Treatment recommended or prescribed?</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_with_other_products__c</fullName>
        <inlineHelpText>Did you use this product with any other products?</inlineHelpText>
        <label>Use with other products</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>When_did_symptom_10_disappear__c</fullName>
        <inlineHelpText>Enter when the symptom disappeared</inlineHelpText>
        <label>When did symptom 10 disappear?</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When_did_symptom_1_disappear__c</fullName>
        <inlineHelpText>Pick when the symptom disappeared</inlineHelpText>
        <label>When did symptom 1 disappear?</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When_did_symptom_2_disappear__c</fullName>
        <inlineHelpText>Enter the time when symptom disappeared</inlineHelpText>
        <label>When did symptom 2 disappear?</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When_did_the_symptom_10_appear__c</fullName>
        <description>Fill this out for each of the symptoms.</description>
        <inlineHelpText>Fill this out for each of the symptoms.</inlineHelpText>
        <label>When did the symptom 10 appear?</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When_did_the_symptom_1_appear__c</fullName>
        <description>Fill this out for each of the symptoms.</description>
        <inlineHelpText>Fill this out for each of the symptoms.</inlineHelpText>
        <label>When did the symptom 1 appear?</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When_did_the_symptom_2_appear__c</fullName>
        <inlineHelpText>Please enter when this symptom first showed</inlineHelpText>
        <label>When did the symptom 2 appear?</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When_stopped__c</fullName>
        <inlineHelpText>If no, when did you stop using product?</inlineHelpText>
        <label>When stopped</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Where_applied__c</fullName>
        <inlineHelpText>Where did you apply the mixture?</inlineHelpText>
        <label>Where applied</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Which_chemical_treatments__c</fullName>
        <inlineHelpText>Which chemical treatments?</inlineHelpText>
        <label>Which chemical treatments</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>age_months_or_years__c</fullName>
        <inlineHelpText>Is the age in months or years?</inlineHelpText>
        <label>Age: months or years?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Safety Assessment Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Metadata_Survey_Trigger__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sensitive_data_consent__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>6/23/2016 12:00 AM</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyView</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Metadata_Survey_Trigger__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Metadata_Survey_Trigger__c</field>
            <operation>equals</operation>
            <value>MTN-000181</value>
        </filters>
        <label>MyView</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Surveys_on_Other_Issues</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <filterScope>Everything</filterScope>
        <label>Surveys on Other Issues</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Surveys_on_Packaging_Issues</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <filterScope>Everything</filterScope>
        <label>Surveys on Packaging Issues</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Surveys_on_Product_Issues</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <filterScope>Everything</filterScope>
        <label>Surveys on Product Issues</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SAS-{0000000}</displayFormat>
        <label>Safety Assessment Survey</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Safety Assessment Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SAS_Status_Locked</fullName>
        <active>false</active>
        <description>Survey cannot be edited if the Status is locked</description>
        <errorConditionFormula>ISPICKVAL(Status__c,&apos;Locked&apos;)</errorConditionFormula>
        <errorMessage>Survey cannot be edited when the Status is in &apos;Locked&apos; state</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SAS_Survey</fullName>
        <active>false</active>
        <description>If case is owned by GSSA, SAS survey cannot be edited</description>
        <errorConditionFormula>AND( 
NOT(ISNULL(Case__r.GSSA_Ownership__c)) ,
$Setup.Global_Org_Settings__c.System_Administrator_Profile_Id__c &lt;&gt; $Profile.Id, 
$Profile.Name &lt;&gt; &quot;Integration User&quot; 
)</errorConditionFormula>
        <errorMessage>SAS Survey cannot be edited when case is owned by GSSA</errorMessage>
    </validationRules>
</CustomObject>